--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -20,6 +20,7 @@
    <main>
     <section>
         <p></p>
+        <video src="https://www.youtube.com/watch?v=qz0aGYrrlhU&t=3710s"></video>
     </section>    
    </main>
    <footer>
