--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width", initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1>About TechCon 2024</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#schedule">Schedule</a></li>
+                <li><a href="#register">Register</a></li>
+                <li><a href="#contact">Contact</a></li>   
+        
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <img src="" alt="">
+        </article>
+        <article>
+            <p></p>
+        </article>
+        <article>
+            <img src="" alt="">
+        </article>
+    </main>
+    <footer>
+        <p>copyright</p>
+    </footer>
+</body>
+</html>
