--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -19,13 +19,18 @@
         </nav>
     </header>
     <main>
+
         <article>
+            <p>History</p>
             <img src="" alt="">
         </article>
+
         <article>
-            <p></p>
+            <p>Mission</p>
         </article>
+
         <article>
+            <p>Past Speakers</p>
             <img src="" alt="">
         </article>
     </main>
