--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1>Schedule for TechCon 2024</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#register">Register</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <table>
+            <th scope="col">Time</th>
+            <th scope="col">Session</th>
+            <th scope="col">Speaker</th>
+            <tbody>
+                <td></td>
+                <td></td>
+                <td></td>
+                
+            </tbody>
+            <caption>Detailed Schedule of Events for TechCon 2024</caption>
+        </table>
+    </main>
+    <footer><p>copyright</p></footer>
+</body>
+</html>
