--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1>Register for TechCon 2024</h1>
+        <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#schedule">Schedule</a></li>
+            <li><a href="contact">Contact</a></li>
+        </ul>
+        </nav>
+    </header>
+    <main>
+        <form action="">
+           
+            <fieldset>
+                <label for="text">Name</label>
+                <input type="text">
+            </fieldset>
+            <fieldset>
+                <label for="email">Email</label>
+                <input type="email">
+            </fieldset>
+            <fieldset>
+                
+                <input type="password">
+            </fieldset>
+            <fieldset>
+                <input type="checkbox">agree term and conditions</input>
+            </fieldset>
+            <button type="submit">Register Now</button>
+        </form>
+    </main>
+    <footer><p>copyright</p></footer>
+</body>
+</html>
