--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=header, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1>Contact Us</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#schedule">Schedule</a></li>
+                <li><a href="#register">Register</a></li>
+            </ul>
+        </nav>
+</header>
+<main>
+    <a href="mailto:kalekirstoszeru@gmail.com"></a>
+    <a href="" target="_blank"></a>
+    <iframe src="" frameborder="0"></iframe>
+    <form action=""></form>
+</main>
+</body>
+</html>
