--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -21,7 +21,17 @@
     <a href="mailto:kalekirstoszeru@gmail.com"></a>
     <a href="" target="_blank"></a>
     <iframe src="" frameborder="0"></iframe>
-    <form action=""></form>
+    <form action="">
+        <fieldset><label for="text">Name</label>
+            <input type="text"></fieldset>
+        <fieldset><label for="email">Name</label>
+            <input type="email"></fieldset>
+        <fieldset><textarea name="" id=""></textarea>
+            <label for="text">Name</label>
+        </fieldset>
+        <button type="submit">Send Message</button>
+    </form>
 </main>
+<footer>copyright</footer>
 </body>
 </html>
