--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -18,7 +18,7 @@
         </nav>
 </header>
 <main>
-    <a href="mailto:kalekirstoszeru@gmail.com"></a>
+    <a href="mailto:email@example.com"></a>
     <a href="" target="_blank"></a>
     <iframe src="" frameborder="0"></iframe>
     <form action="">
@@ -26,7 +26,7 @@
             <input type="text"></fieldset>
         <fieldset><label for="email">Name</label>
             <input type="email"></fieldset>
-        <fieldset><textarea name="" id=""></textarea>
+        <fieldset><textarea name="" id="">Message</textarea>
             <label for="text">Name</label>
         </fieldset>
         <button type="submit">Send Message</button>
