--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -26,7 +26,7 @@
             <input type="text"></fieldset>
         <fieldset><label for="email">Name</label>
             <input type="email"></fieldset>
-        <fieldset><textarea name="" id="">Message</textarea>
+        <fieldset><textarea name="" id="">message</textarea>
             <label for="text">Name</label>
         </fieldset>
         <button type="submit">Send Message</button>
